src/Phase1-V2/parser.output
State 49 conflicts: 3 reduce/reduce
State 65 conflicts: 1 reduce/reduce
State 96 conflicts: 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: program statement
    2        | statement NEWLINE

    3 statement: expr

    4 expr: variable_declaration
    5     | const_variable_declaration
    6     | variable_assignment
    7     | function_declaration
    8     | function_call
    9     | if_statement
   10     | do_statement
   11     | while_statement
   12     | switch_statement
   13     | break_statement
   14     | continue_statement
   15     | return_statement
   16     | for_statement
   17     | COMMENT

   18 variable_declaration: variable_type IDENTIFIER SEMICOLON
   19                     | variable_type IDENTIFIER ASSIGN condtional_expr SEMICOLON

   20 CONST_VALUE: INT_VALUE
   21            | FLOAT_VALUE
   22            | STRING_VALUE
   23            | CHAR_VALUE
   24            | BOOL_VALUE_TRUE
   25            | BOOL_VALUE_FALSE

   26 const_variable_declaration: CONSTANT variable_type IDENTIFIER ASSIGN condtional_expr SEMICOLON

   27 variable_type: INT
   28              | FLOAT
   29              | STRING
   30              | CHAR
   31              | BOOL

   32 variable_assignment: IDENTIFIER ASSIGN condtional_expr SEMICOLON

   33 function_declaration: DEF variable_type IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   34                     | DEF VOID IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE SEMICOLON

   35 parameter_list: parameter_list COMMA parameter
   36               | parameter
   37               | /* empty */

   38 parameter: variable_type IDENTIFIER
   39          | variable_type IDENTIFIER ASSIGN condtional_expr

   40 function_call: IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN SEMICOLON

   41 function_call_in_expr: IDENTIFIER LEFT_PAREN argument_list RIGHT_PAREN

   42 argument_list: argument_list COMMA argument
   43              | argument
   44              | /* empty */

   45 argument: condtional_expr
   46         | IDENTIFIER ASSIGN condtional_expr

   47 if_statement: IF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   48             | IF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE ELSE LEFT_BRACE program RIGHT_BRACE
   49             | IF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE elseif_expr

   50 elseif_expr: ELSEIF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   51            | ELSEIF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE ELSE LEFT_BRACE program RIGHT_BRACE
   52            | ELSEIF LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE elseif_expr

   53 while_statement: WHILE LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

   54 do_statement: DO LEFT_BRACE program RIGHT_BRACE WHILE LEFT_PAREN condtional_expr RIGHT_PAREN SEMICOLON

   55 condtional_expr: math_expr
   56                | IDENTIFIER
   57                | function_call_in_expr
   58                | CONST_VALUE

   59 switch_statement: SWITCH LEFT_PAREN IDENTIFIER RIGHT_PAREN LEFT_BRACE switch_case_list RIGHT_BRACE

   60 switch_case_list: switch_case_list switch_case
   61                 | switch_case

   62 switch_case: CASE switch_case_value COLON LEFT_BRACE program RIGHT_BRACE
   63            | DEFAULT COLON LEFT_BRACE program RIGHT_BRACE

   64 switch_case_value: INT_VALUE
   65                  | CHAR_VALUE
   66                  | BOOL_VALUE_TRUE
   67                  | BOOL_VALUE_FALSE

   68 break_statement: BREAK SEMICOLON

   69 continue_statement: CONTINUE SEMICOLON

   70 return_statement: RETURN SEMICOLON
   71                 | RETURN condtional_expr SEMICOLON

   72 for_statement: FOR LEFT_PAREN for_init_expr SEMICOLON condtional_expr SEMICOLON for_loop_do RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

   73 for_loop_do: final_expr COMMA final_expr
   74            | final_expr

   75 final_expr: condtional_expr
   76           | /* empty */

   77 for_init_expr: variable_type IDENTIFIER
   78              | variable_type IDENTIFIER ASSIGN condtional_expr
   79              | IDENTIFIER ASSIGN condtional_expr
   80              | condtional_expr
   81              | /* empty */

   82 math_expr: math_expr OR math_expr
   83          | math_expr AND math_expr
   84          | NOT math_expr
   85          | math_expr EQUAL math_expr
   86          | math_expr NOTEQUAL math_expr
   87          | math_expr GREATER_THAN math_expr
   88          | math_expr GREATER_THAN_EQUAL math_expr
   89          | math_expr LESS_THAN math_expr
   90          | math_expr LESS_THAN_EQUAL math_expr
   91          | math_expr PLUS math_expr
   92          | math_expr MINUS math_expr
   93          | math_expr TIMES math_expr
   94          | math_expr DIVIDE math_expr
   95          | math_expr MODULUS math_expr
   96          | math_expr EXPONENT math_expr
   97          | LEFT_PAREN math_expr RIGHT_PAREN
   98          | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 27
FLOAT (259) 28
STRING (260) 29
CHAR (261) 30
BOOL (262) 31
VOID (263) 34
FOR (264) 72
WHILE (265) 53 54
DO (266) 54
BREAK (267) 68
CONTINUE (268) 69
IF (269) 47 48 49
ELSE (270) 48 51
ELSEIF (271) 50 51 52
SWITCH (272) 59
CASE (273) 62
DEFAULT (274) 63
CONSTANT (275) 26
RETURN (276) 70 71
DEF (277) 33 34
INT_VALUE (278) 20 64
FLOAT_VALUE (279) 21
STRING_VALUE (280) 22
CHAR_VALUE (281) 23 65
BOOL_VALUE_TRUE (282) 24 66
BOOL_VALUE_FALSE (283) 25 67
COMMENT (284) 17
IDENTIFIER (285) 18 19 26 32 33 34 38 39 40 41 46 56 59 77 78 79 98
ASSIGN (286) 19 26 32 39 46 78 79
PLUS (287) 91
MINUS (288) 92
TIMES (289) 93
DIVIDE (290) 94
MODULUS (291) 95
EXPONENT (292) 96
AND (293) 83
OR (294) 82
NOT (295) 84
EQUAL (296) 85
NOTEQUAL (297) 86
GREATER_THAN (298) 87
GREATER_THAN_EQUAL (299) 88
LESS_THAN (300) 89
LESS_THAN_EQUAL (301) 90
LEFT_PAREN (302) 33 34 40 41 47 48 49 50 51 52 53 54 59 72 97
RIGHT_PAREN (303) 33 34 40 41 47 48 49 50 51 52 53 54 59 72 97
LEFT_BRACE (304) 33 34 47 48 49 50 51 52 53 54 59 62 63 72
RIGHT_BRACE (305) 33 34 47 48 49 50 51 52 53 54 59 62 63 72
COMMA (306) 35 42 73
SEMICOLON (307) 18 19 26 32 34 40 54 68 69 70 71 72
COLON (308) 62 63
NEWLINE (309) 2


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1 2, on right: 0 1 33 34 47 48 49 50 51 52 53 54 62 63
    72
statement (57)
    on left: 3, on right: 1 2
expr (58)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17, on right: 3
variable_declaration (59)
    on left: 18 19, on right: 4
CONST_VALUE (60)
    on left: 20 21 22 23 24 25, on right: 58
const_variable_declaration (61)
    on left: 26, on right: 5
variable_type (62)
    on left: 27 28 29 30 31, on right: 18 19 26 33 38 39 77 78
variable_assignment (63)
    on left: 32, on right: 6
function_declaration (64)
    on left: 33 34, on right: 7
parameter_list (65)
    on left: 35 36 37, on right: 33 34 35
parameter (66)
    on left: 38 39, on right: 35 36
function_call (67)
    on left: 40, on right: 8
function_call_in_expr (68)
    on left: 41, on right: 57
argument_list (69)
    on left: 42 43 44, on right: 40 41 42
argument (70)
    on left: 45 46, on right: 42 43
if_statement (71)
    on left: 47 48 49, on right: 9
elseif_expr (72)
    on left: 50 51 52, on right: 49 52
while_statement (73)
    on left: 53, on right: 11
do_statement (74)
    on left: 54, on right: 10
condtional_expr (75)
    on left: 55 56 57 58, on right: 19 26 32 39 45 46 47 48 49 50 51
    52 53 54 71 72 75 78 79 80
switch_statement (76)
    on left: 59, on right: 12
switch_case_list (77)
    on left: 60 61, on right: 59 60
switch_case (78)
    on left: 62 63, on right: 60 61
switch_case_value (79)
    on left: 64 65 66 67, on right: 62
break_statement (80)
    on left: 68, on right: 13
continue_statement (81)
    on left: 69, on right: 14
return_statement (82)
    on left: 70 71, on right: 15
for_statement (83)
    on left: 72, on right: 16
for_loop_do (84)
    on left: 73 74, on right: 72
final_expr (85)
    on left: 75 76, on right: 73 74
for_init_expr (86)
    on left: 77 78 79 80 81, on right: 72
math_expr (87)
    on left: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98, on right:
    55 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97


state 0

    0 $accept: . program $end

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    CHAR        shift, and go to state 4
    BOOL        shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    BREAK       shift, and go to state 9
    CONTINUE    shift, and go to state 10
    IF          shift, and go to state 11
    SWITCH      shift, and go to state 12
    CONSTANT    shift, and go to state 13
    RETURN      shift, and go to state 14
    DEF         shift, and go to state 15
    COMMENT     shift, and go to state 16
    IDENTIFIER  shift, and go to state 17

    program                     go to state 18
    statement                   go to state 19
    expr                        go to state 20
    variable_declaration        go to state 21
    const_variable_declaration  go to state 22
    variable_type               go to state 23
    variable_assignment         go to state 24
    function_declaration        go to state 25
    function_call               go to state 26
    if_statement                go to state 27
    while_statement             go to state 28
    do_statement                go to state 29
    switch_statement            go to state 30
    break_statement             go to state 31
    continue_statement          go to state 32
    return_statement            go to state 33
    for_statement               go to state 34


state 1

   27 variable_type: INT .

    $default  reduce using rule 27 (variable_type)


state 2

   28 variable_type: FLOAT .

    $default  reduce using rule 28 (variable_type)


state 3

   29 variable_type: STRING .

    $default  reduce using rule 29 (variable_type)


state 4

   30 variable_type: CHAR .

    $default  reduce using rule 30 (variable_type)


state 5

   31 variable_type: BOOL .

    $default  reduce using rule 31 (variable_type)


state 6

   72 for_statement: FOR . LEFT_PAREN for_init_expr SEMICOLON condtional_expr SEMICOLON for_loop_do RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 35


state 7

   53 while_statement: WHILE . LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 36


state 8

   54 do_statement: DO . LEFT_BRACE program RIGHT_BRACE WHILE LEFT_PAREN condtional_expr RIGHT_PAREN SEMICOLON

    LEFT_BRACE  shift, and go to state 37


state 9

   68 break_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 38


state 10

   69 continue_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 39


state 11

   47 if_statement: IF . LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   48             | IF . LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE ELSE LEFT_BRACE program RIGHT_BRACE
   49             | IF . LEFT_PAREN condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE elseif_expr

    LEFT_PAREN  shift, and go to state 40


state 12

   59 switch_statement: SWITCH . LEFT_PAREN IDENTIFIER RIGHT_PAREN LEFT_BRACE switch_case_list RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 41


state 13

   26 const_variable_declaration: CONSTANT . variable_type IDENTIFIER ASSIGN condtional_expr SEMICOLON

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    STRING  shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5

    variable_type  go to state 42


state 14

   70 return_statement: RETURN . SEMICOLON
   71                 | RETURN . condtional_expr SEMICOLON

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 49
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51
    SEMICOLON         shift, and go to state 52

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    condtional_expr        go to state 55
    math_expr              go to state 56


state 15

   33 function_declaration: DEF . variable_type IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   34                     | DEF . VOID IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE SEMICOLON

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    STRING  shift, and go to state 3
    CHAR    shift, and go to state 4
    BOOL    shift, and go to state 5
    VOID    shift, and go to state 57

    variable_type  go to state 58


state 16

   17 expr: COMMENT .

    $default  reduce using rule 17 (expr)


state 17

   32 variable_assignment: IDENTIFIER . ASSIGN condtional_expr SEMICOLON
   40 function_call: IDENTIFIER . LEFT_PAREN argument_list RIGHT_PAREN SEMICOLON

    ASSIGN      shift, and go to state 59
    LEFT_PAREN  shift, and go to state 60


state 18

    0 $accept: program . $end
    1 program: program . statement

    $end        shift, and go to state 61
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    CHAR        shift, and go to state 4
    BOOL        shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    BREAK       shift, and go to state 9
    CONTINUE    shift, and go to state 10
    IF          shift, and go to state 11
    SWITCH      shift, and go to state 12
    CONSTANT    shift, and go to state 13
    RETURN      shift, and go to state 14
    DEF         shift, and go to state 15
    COMMENT     shift, and go to state 16
    IDENTIFIER  shift, and go to state 17

    statement                   go to state 62
    expr                        go to state 20
    variable_declaration        go to state 21
    const_variable_declaration  go to state 22
    variable_type               go to state 23
    variable_assignment         go to state 24
    function_declaration        go to state 25
    function_call               go to state 26
    if_statement                go to state 27
    while_statement             go to state 28
    do_statement                go to state 29
    switch_statement            go to state 30
    break_statement             go to state 31
    continue_statement          go to state 32
    return_statement            go to state 33
    for_statement               go to state 34


state 19

    2 program: statement . NEWLINE

    NEWLINE  shift, and go to state 63


state 20

    3 statement: expr .

    $default  reduce using rule 3 (statement)


state 21

    4 expr: variable_declaration .

    $default  reduce using rule 4 (expr)


state 22

    5 expr: const_variable_declaration .

    $default  reduce using rule 5 (expr)


state 23

   18 variable_declaration: variable_type . IDENTIFIER SEMICOLON
   19                     | variable_type . IDENTIFIER ASSIGN condtional_expr SEMICOLON

    IDENTIFIER  shift, and go to state 64


state 24

    6 expr: variable_assignment .

    $default  reduce using rule 6 (expr)


state 25

    7 expr: function_declaration .

    $default  reduce using rule 7 (expr)


state 26

    8 expr: function_call .

    $default  reduce using rule 8 (expr)


state 27

    9 expr: if_statement .

    $default  reduce using rule 9 (expr)


state 28

   11 expr: while_statement .

    $default  reduce using rule 11 (expr)


state 29

   10 expr: do_statement .

    $default  reduce using rule 10 (expr)


state 30

   12 expr: switch_statement .

    $default  reduce using rule 12 (expr)


state 31

   13 expr: break_statement .

    $default  reduce using rule 13 (expr)


state 32

   14 expr: continue_statement .

    $default  reduce using rule 14 (expr)


state 33

   15 expr: return_statement .

    $default  reduce using rule 15 (expr)


state 34

   16 expr: for_statement .

    $default  reduce using rule 16 (expr)


state 35

   72 for_statement: FOR LEFT_PAREN . for_init_expr SEMICOLON condtional_expr SEMICOLON for_loop_do RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    INT               shift, and go to state 1
    FLOAT             shift, and go to state 2
    STRING            shift, and go to state 3
    CHAR              shift, and go to state 4
    BOOL              shift, and go to state 5
    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 65
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    $default  reduce using rule 81 (for_init_expr)

    CONST_VALUE            go to state 53
    variable_type          go to state 66
    function_call_in_expr  go to state 54
    condtional_expr        go to state 67
    for_init_expr          go to state 68
    math_expr              go to state 56


state 36

   53 while_statement: WHILE LEFT_PAREN . condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 49
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    condtional_expr        go to state 69
    math_expr              go to state 56


state 37

   54 do_statement: DO LEFT_BRACE . program RIGHT_BRACE WHILE LEFT_PAREN condtional_expr RIGHT_PAREN SEMICOLON

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    STRING      shift, and go to state 3
    CHAR        shift, and go to state 4
    BOOL        shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    DO          shift, and go to state 8
    BREAK       shift, and go to state 9
    CONTINUE    shift, and go to state 10
    IF          shift, and go to state 11
    SWITCH      shift, and go to state 12
    CONSTANT    shift, and go to state 13
    RETURN      shift, and go to state 14
    DEF         shift, and go to state 15
    COMMENT     shift, and go to state 16
    IDENTIFIER  shift, and go to state 17

    program                     go to state 70
    statement                   go to state 19
    expr                        go to state 20
    variable_declaration        go to state 21
    const_variable_declaration  go to state 22
    variable_type               go to state 23
    variable_assignment         go to state 24
    function_declaration        go to state 25
    function_call               go to state 26
    if_statement                go to state 27
    while_statement             go to state 28
    do_statement                go to state 29
    switch_statement            go to state 30
    break_statement             go to state 31
    continue_statement          go to state 32
    return_statement            go to state 33
    for_statement               go to state 34


state 38

   68 break_statement: BREAK SEMICOLON .

    $default  reduce using rule 68 (break_statement)


state 39

   69 continue_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 69 (continue_statement)


state 40

   47 if_statement: IF LEFT_PAREN . condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   48             | IF LEFT_PAREN . condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE ELSE LEFT_BRACE program RIGHT_BRACE
   49             | IF LEFT_PAREN . condtional_expr RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE elseif_expr

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 49
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    condtional_expr        go to state 71
    math_expr              go to state 56


state 41

   59 switch_statement: SWITCH LEFT_PAREN . IDENTIFIER RIGHT_PAREN LEFT_BRACE switch_case_list RIGHT_BRACE

    IDENTIFIER  shift, and go to state 72


state 42

   26 const_variable_declaration: CONSTANT variable_type . IDENTIFIER ASSIGN condtional_expr SEMICOLON

    IDENTIFIER  shift, and go to state 73


state 43

   20 CONST_VALUE: INT_VALUE .

    $default  reduce using rule 20 (CONST_VALUE)


state 44

   21 CONST_VALUE: FLOAT_VALUE .

    $default  reduce using rule 21 (CONST_VALUE)


state 45

   22 CONST_VALUE: STRING_VALUE .

    $default  reduce using rule 22 (CONST_VALUE)


state 46

   23 CONST_VALUE: CHAR_VALUE .

    $default  reduce using rule 23 (CONST_VALUE)


state 47

   24 CONST_VALUE: BOOL_VALUE_TRUE .

    $default  reduce using rule 24 (CONST_VALUE)


state 48

   25 CONST_VALUE: BOOL_VALUE_FALSE .

    $default  reduce using rule 25 (CONST_VALUE)


state 49

   41 function_call_in_expr: IDENTIFIER . LEFT_PAREN argument_list RIGHT_PAREN
   56 condtional_expr: IDENTIFIER .
   98 math_expr: IDENTIFIER .

    LEFT_PAREN  shift, and go to state 74

    RIGHT_PAREN  reduce using rule 56 (condtional_expr)
    RIGHT_PAREN  [reduce using rule 98 (math_expr)]
    COMMA        reduce using rule 56 (condtional_expr)
    COMMA        [reduce using rule 98 (math_expr)]
    SEMICOLON    reduce using rule 56 (condtional_expr)
    SEMICOLON    [reduce using rule 98 (math_expr)]
    $default     reduce using rule 98 (math_expr)


state 50

   84 math_expr: NOT . math_expr

    IDENTIFIER  shift, and go to state 75
    NOT         shift, and go to state 50
    LEFT_PAREN  shift, and go to state 51

    math_expr  go to state 76


state 51

   97 math_expr: LEFT_PAREN . math_expr RIGHT_PAREN

    IDENTIFIER  shift, and go to state 75
    NOT         shift, and go to state 50
    LEFT_PAREN  shift, and go to state 51

    math_expr  go to state 77


state 52

   70 return_statement: RETURN SEMICOLON .

    $default  reduce using rule 70 (return_statement)


state 53

   58 condtional_expr: CONST_VALUE .

    $default  reduce using rule 58 (condtional_expr)


state 54

   57 condtional_expr: function_call_in_expr .

    $default  reduce using rule 57 (condtional_expr)


state 55

   71 return_statement: RETURN condtional_expr . SEMICOLON

    SEMICOLON  shift, and go to state 78


state 56

   55 condtional_expr: math_expr .
   82 math_expr: math_expr . OR math_expr
   83          | math_expr . AND math_expr
   85          | math_expr . EQUAL math_expr
   86          | math_expr . NOTEQUAL math_expr
   87          | math_expr . GREATER_THAN math_expr
   88          | math_expr . GREATER_THAN_EQUAL math_expr
   89          | math_expr . LESS_THAN math_expr
   90          | math_expr . LESS_THAN_EQUAL math_expr
   91          | math_expr . PLUS math_expr
   92          | math_expr . MINUS math_expr
   93          | math_expr . TIMES math_expr
   94          | math_expr . DIVIDE math_expr
   95          | math_expr . MODULUS math_expr
   96          | math_expr . EXPONENT math_expr

    PLUS                shift, and go to state 79
    MINUS               shift, and go to state 80
    TIMES               shift, and go to state 81
    DIVIDE              shift, and go to state 82
    MODULUS             shift, and go to state 83
    EXPONENT            shift, and go to state 84
    AND                 shift, and go to state 85
    OR                  shift, and go to state 86
    EQUAL               shift, and go to state 87
    NOTEQUAL            shift, and go to state 88
    GREATER_THAN        shift, and go to state 89
    GREATER_THAN_EQUAL  shift, and go to state 90
    LESS_THAN           shift, and go to state 91
    LESS_THAN_EQUAL     shift, and go to state 92

    $default  reduce using rule 55 (condtional_expr)


state 57

   34 function_declaration: DEF VOID . IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE SEMICOLON

    IDENTIFIER  shift, and go to state 93


state 58

   33 function_declaration: DEF variable_type . IDENTIFIER LEFT_PAREN parameter_list RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    IDENTIFIER  shift, and go to state 94


state 59

   32 variable_assignment: IDENTIFIER ASSIGN . condtional_expr SEMICOLON

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 49
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    condtional_expr        go to state 95
    math_expr              go to state 56


state 60

   40 function_call: IDENTIFIER LEFT_PAREN . argument_list RIGHT_PAREN SEMICOLON

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 96
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    $default  reduce using rule 44 (argument_list)

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    argument_list          go to state 97
    argument               go to state 98
    condtional_expr        go to state 99
    math_expr              go to state 56


state 61

    0 $accept: program $end .

    $default  accept


state 62

    1 program: program statement .

    $default  reduce using rule 1 (program)


state 63

    2 program: statement NEWLINE .

    $default  reduce using rule 2 (program)


state 64

   18 variable_declaration: variable_type IDENTIFIER . SEMICOLON
   19                     | variable_type IDENTIFIER . ASSIGN condtional_expr SEMICOLON

    ASSIGN     shift, and go to state 100
    SEMICOLON  shift, and go to state 101


state 65

   41 function_call_in_expr: IDENTIFIER . LEFT_PAREN argument_list RIGHT_PAREN
   56 condtional_expr: IDENTIFIER .
   79 for_init_expr: IDENTIFIER . ASSIGN condtional_expr
   98 math_expr: IDENTIFIER .

    ASSIGN      shift, and go to state 102
    LEFT_PAREN  shift, and go to state 74

    SEMICOLON  reduce using rule 56 (condtional_expr)
    SEMICOLON  [reduce using rule 98 (math_expr)]
    $default   reduce using rule 98 (math_expr)


state 66

   77 for_init_expr: variable_type . IDENTIFIER
   78              | variable_type . IDENTIFIER ASSIGN condtional_expr

    IDENTIFIER  shift, and go to state 103


state 67

   80 for_init_expr: condtional_expr .

    $default  reduce using rule 80 (for_init_expr)


state 68

   72 for_statement: FOR LEFT_PAREN for_init_expr . SEMICOLON condtional_expr SEMICOLON for_loop_do RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    SEMICOLON  shift, and go to state 104


state 69

   53 while_statement: WHILE LEFT_PAREN condtional_expr . RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE

    RIGHT_PAREN  shift, and go to state 105


state 70

    1 program: program . statement
   54 do_statement: DO LEFT_BRACE program . RIGHT_BRACE WHILE LEFT_PAREN condtional_expr RIGHT_PAREN SEMICOLON

    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    STRING       shift, and go to state 3
    CHAR         shift, and go to state 4
    BOOL         shift, and go to state 5
    FOR          shift, and go to state 6
    WHILE        shift, and go to state 7
    DO           shift, and go to state 8
    BREAK        shift, and go to state 9
    CONTINUE     shift, and go to state 10
    IF           shift, and go to state 11
    SWITCH       shift, and go to state 12
    CONSTANT     shift, and go to state 13
    RETURN       shift, and go to state 14
    DEF          shift, and go to state 15
    COMMENT      shift, and go to state 16
    IDENTIFIER   shift, and go to state 17
    RIGHT_BRACE  shift, and go to state 106

    statement                   go to state 62
    expr                        go to state 20
    variable_declaration        go to state 21
    const_variable_declaration  go to state 22
    variable_type               go to state 23
    variable_assignment         go to state 24
    function_declaration        go to state 25
    function_call               go to state 26
    if_statement                go to state 27
    while_statement             go to state 28
    do_statement                go to state 29
    switch_statement            go to state 30
    break_statement             go to state 31
    continue_statement          go to state 32
    return_statement            go to state 33
    for_statement               go to state 34


state 71

   47 if_statement: IF LEFT_PAREN condtional_expr . RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE
   48             | IF LEFT_PAREN condtional_expr . RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE ELSE LEFT_BRACE program RIGHT_BRACE
   49             | IF LEFT_PAREN condtional_expr . RIGHT_PAREN LEFT_BRACE program RIGHT_BRACE elseif_expr

    RIGHT_PAREN  shift, and go to state 107


state 72

   59 switch_statement: SWITCH LEFT_PAREN IDENTIFIER . RIGHT_PAREN LEFT_BRACE switch_case_list RIGHT_BRACE

    RIGHT_PAREN  shift, and go to state 108


state 73

   26 const_variable_declaration: CONSTANT variable_type IDENTIFIER . ASSIGN condtional_expr SEMICOLON

    ASSIGN  shift, and go to state 109


state 74

   41 function_call_in_expr: IDENTIFIER LEFT_PAREN . argument_list RIGHT_PAREN

    INT_VALUE         shift, and go to state 43
    FLOAT_VALUE       shift, and go to state 44
    STRING_VALUE      shift, and go to state 45
    CHAR_VALUE        shift, and go to state 46
    BOOL_VALUE_TRUE   shift, and go to state 47
    BOOL_VALUE_FALSE  shift, and go to state 48
    IDENTIFIER        shift, and go to state 96
    NOT               shift, and go to state 50
    LEFT_PAREN        shift, and go to state 51

    $default  reduce using rule 44 (argument_list)

    CONST_VALUE            go to state 53
    function_call_in_expr  go to state 54
    argument_list          go to state 110
    argument               go to state 98
    condtional_expr        go to state 99
    math_expr              go to state 56


state 75

   98 math_expr: IDENTIFIER .

    $default  reduce using rule 98 (math_expr)


state 76

   82 math_expr: math_expr . OR math_expr
   83          | math_expr . AND math_expr
   84          | NOT math_expr .
   85          | math_expr . EQUAL math_expr
   86          | math_expr . NOTEQUAL math_expr
   87          | math_expr . GREATER_THAN math_expr
   88          | math_expr . GREATER_THAN_EQUAL math_expr
   89          | math_expr . LESS_THAN math_expr
   90          | math_expr . LESS_THAN_EQUAL math_expr
   91          | math_expr . PLUS math_expr
   92          | math_expr . MINUS math_expr
   93          | math_expr . TIMES math_expr
   94          | math_expr . DIVIDE math_expr
   95          | math_expr . MODULUS math_expr
   96          | math_expr . EXPONENT math_expr
